# wb-alert-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 4ca17912af7e_init_first_models.py  c55fadc558a3_recreate_database.py
app/: bot.py  main.py
app/core/: __init__.py  config.py  database.py  deps.py
app/domain/: exceptions.py
app/models/: __init__.py  alert.py  base.py  enums.py  product.py  user.py
app/repositories/: alert.py  base_repository.py  product.py  sqlalchemy_repository.py  user.py
app/schemas/: marketplace.py
app/services/: base_client.py  client_factory.py  notification.py  price_service.py  wb_client.py
