[project]
name = "wb-alert-bot"
version = "0.1.0"
description = "Telegram bot for Ozon and Wildberries price monitoring and alerts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.26.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "fastapi==0.135.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings==2.13.1",
    "redis>=7.3.0",
    "sqlalchemy==2.0.48",
    "uvicorn==0.42.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]


[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "SIM",
    "ASYNC",
    "T20"
]

ignore = ["UP037"]

[tool.ruff.lint.isort]
force-single-line = true


[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_untyped_fields = true
